Fixed content heading spacing in response to bigger page heading.

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ header h3 {
 }
 
 main {
-    margin-top: 185px;
+    margin-top: 200px;
     margin-bottom: 75px;
 }
 
